Edited company name

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Welcome to KODPSACE LAB</div>
+                <div class="masthead-subheading">Welcome to KODSPACE LAB</div>
                 <div class="masthead-heading text-uppercase">We are tech savvy</div>
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
             </div>
