--- a/index.html
+++ b/index.html
@@ -48,23 +48,23 @@
                 <div class="row text-center">
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
-                             <img src="assets/img/services/itconsultancy.png" class="rounded" alt="Cinque Terre" style="width: 100%;">
+                             <img src="assets/img/services/consultancy.jpg" class="rounded" alt="Cinque Terre" style="width: 100%;">
                         </span>
-                        <h4 class="my-3">IT CONSULTANCY</h4>
+                        <h6 class="my-3">IT CONSULTANCY</h6>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <img src="assets/img/services/hardwaresupplyandmaintenance.jpg" class="rounded" alt="Cinque Terre" style="width: 100%;">
                         </span>
-                        <h4 class="my-3">HARDWARE SUPPLIES AND MAINTENANCE SERVICES</h4>
+                        <h6 class="my-3">HARDWARE SUPPLIES AND MAINTENANCE SERVICES</h6>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                              <img src="assets/img/services/bootcamp.png" class="rounded" alt="Cinque Terre" style="width: 100%;">
                         </span>
-                        <h4 class="my-3">SOFTWARE DEVELOPMENT AND RE-ENGINEERING</h4>
+                        <h6 class="my-3">SOFTWARE DEVELOPMENT AND RE-ENGINEERING</h6>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                     </div>
 
@@ -72,21 +72,21 @@
                         <span class="fa-stack fa-4x">
                             <img src="assets/img/services/mobileappdev.jpg" class="rounded" alt="Cinque Terre" style="width: 100%;">
                         </span>
-                        <h4 class="my-3">MOBILE APPLICATION DEVELOPERS </h4>
+                        <h6 class="my-3">MOBILE APPLICATION DEVELOPERS </h6>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <img src="assets/img/services/training.jpg" class="rounded" alt="Cinque Terre" style="width: 100%;">
                         </span>
-                        <h4 class="my-3">IT HARDWARE AND SOFTWARE TRAINING</h4>
+                        <h6 class="my-3">IT HARDWARE AND SOFTWARE TRAINING</h6>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <img src="assets/img/services/webhorsting.jpg" class="rounded" alt="Cinque Terre" style="width: 100%; height: 100%;">
                         </span>
-                        <h4 class="my-3">WEBSITE HOST AND DEVELOPMENT</h4>
+                        <h6 class="my-3">WEBSITE HOST AND DEVELOPMENT</h6>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                     </div>
 
@@ -94,21 +94,21 @@
                         <span class="fa-stack fa-4x">
                             <img src="assets/img/services/itsupport.png" class="rounded" alt="Cinque Terre" style="width: 100%; height: 100%;">
                         </span>
-                        <h4 class="my-3">TECHNICAL SUPPORT</h4>
+                        <h6 class="my-3">TECHNICAL SUPPORT</h6>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <img src="assets/img/services/incubation.jpg" class="rounded" alt="Cinque Terre" style="width: 100%;">
                         </span>
-                        <h4 class="my-3">SOFTWARE DEVELPMENT INCUBATION</h4>
+                        <h6 class="my-3">SOFTWARE DEVELPMENT INCUBATION</h6>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <img src="assets/img/services/bootcamp.png" class="rounded" alt="Cinque Terre" style="width: 100%;">
                         </span>
-                        <h4 class="my-3">TECH BOOTCAMPS</h4>
+                        <h6 class="my-3">TECH BOOTCAMPS</h6>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                     </div>
                 </div>
