--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <span class="fa-stack fa-4x">
                             <img src="assets/img/services/mobileappdev.jpg" class="rounded" alt="Cinque Terre" style="width: 100%;">
                         </span>
-                        <h6 class="my-3">MOBILE APPLICATION DEVELOPERS </h6>
+                        <h6 class="my-3">MOBILE APPLICATION DEVELOPMENT </h6>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                     </div>
                     <div class="col-md-4">
@@ -101,7 +101,7 @@
                         <span class="fa-stack fa-4x">
                             <img src="assets/img/services/incubation.jpg" class="rounded" alt="Cinque Terre" style="width: 100%;">
                         </span>
-                        <h6 class="my-3">SOFTWARE DEVELPMENT INCUBATION</h6>
+                        <h6 class="my-3">SOFTWARE DEVELOPMENT INCUBATION</h6>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                     </div>
                     <div class="col-md-4">
